--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="640"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="688"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="616.5"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="662.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV" userLabel="Key Settings">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
@@ -161,7 +161,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kWb-cI-2J3" userLabel="Sound Policy">
-                                                        <rect key="frame" x="0.0" y="198.5" width="337.5" height="41"/>
+                                                        <rect key="frame" x="0.0" y="198.5" width="337.5" height="87"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UtE-lq-7Bx">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="41"/>
@@ -194,8 +194,8 @@
                                                                     <constraint firstItem="aBw-42-Elj" firstAttribute="top" secondItem="UtE-lq-7Bx" secondAttribute="top" id="wwK-4P-Bjg"/>
                                                                 </constraints>
                                                             </view>
-                                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPP-3g-JcL">
-                                                                <rect key="frame" x="0.0" y="0.0" width="337.5" height="41"/>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPP-3g-JcL">
+                                                                <rect key="frame" x="0.0" y="46" width="337.5" height="41"/>
                                                                 <subviews>
                                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3el-yo-Eyn">
                                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="41"/>
@@ -228,7 +228,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgf-XD-8xL">
-                                                        <rect key="frame" x="0.0" y="249.5" width="337.5" height="41"/>
+                                                        <rect key="frame" x="0.0" y="295.5" width="337.5" height="41"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="57y-ru-fm8">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="41"/>
@@ -261,7 +261,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wst-Tj-vig" userLabel="PIP switch">
-                                                        <rect key="frame" x="0.0" y="300.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="346.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vgw-ae-1EG">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -291,7 +291,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bzb-9b-Jsh">
-                                                        <rect key="frame" x="0.0" y="336.5" width="337.5" height="5"/>
+                                                        <rect key="frame" x="0.0" y="382.5" width="337.5" height="5"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="pip custom size (0.1 ~ 1.0)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mly-Ko-yMO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="0.0"/>
@@ -309,7 +309,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Q2w-5t-Lw0" userLabel="Sign In">
-                                                        <rect key="frame" x="0.0" y="341.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="387.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ov-Xj-QCU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="31"/>
@@ -375,7 +375,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOg-r2-dAN" userLabel="Log switch">
-                                                        <rect key="frame" x="0.0" y="382.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="428.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Go8-yM-bre">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -405,7 +405,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fDb-Jo-vL5" userLabel="Log switch">
-                                                        <rect key="frame" x="0.0" y="423.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="469.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UYh-Lw-Ate">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -435,7 +435,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB" userLabel="Buttons Functional">
-                                                        <rect key="frame" x="0.0" y="464.5" width="337.5" height="152"/>
+                                                        <rect key="frame" x="0.0" y="510.5" width="337.5" height="152"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hM5-ae-KQX">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
