--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ShopLiveDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Shoplive_Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="688"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="733.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="662.5"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="706.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV" userLabel="Key Settings">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
@@ -92,8 +92,13 @@
                                                             <constraint firstAttribute="height" constant="147.5" id="vSa-n9-cpt"/>
                                                         </constraints>
                                                     </stackView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="AuthToken" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JIB-dC-4Kd">
+                                                        <rect key="frame" x="0.0" y="157.5" width="337.5" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Q2w-5t-Lw0" userLabel="Sign In">
-                                                        <rect key="frame" x="0.0" y="157.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="201.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ov-Xj-QCU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="31"/>
@@ -167,7 +172,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wst-Tj-vig" userLabel="PIP switch">
-                                                        <rect key="frame" x="0.0" y="198.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="242.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vgw-ae-1EG">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -197,7 +202,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bzb-9b-Jsh">
-                                                        <rect key="frame" x="0.0" y="234.5" width="337.5" height="5"/>
+                                                        <rect key="frame" x="0.0" y="278.5" width="337.5" height="5"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="pip custom size (0.1 ~ 1.0)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mly-Ko-yMO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="0.0"/>
@@ -215,7 +220,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="btn-fD-Pk0" userLabel="LoadingAnimation">
-                                                        <rect key="frame" x="0.0" y="239.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="283.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q3i-6B-Ids" userLabel="custom animation switch">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="31"/>
@@ -283,7 +288,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kWb-cI-2J3" userLabel="Sound Policy">
-                                                        <rect key="frame" x="0.0" y="280.5" width="337.5" height="87"/>
+                                                        <rect key="frame" x="0.0" y="324.5" width="337.5" height="87"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UtE-lq-7Bx">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="41"/>
@@ -350,7 +355,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgf-XD-8xL">
-                                                        <rect key="frame" x="0.0" y="377.5" width="337.5" height="41"/>
+                                                        <rect key="frame" x="0.0" y="421.5" width="337.5" height="41"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="57y-ru-fm8">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="41"/>
@@ -383,7 +388,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOg-r2-dAN" userLabel="Log switch">
-                                                        <rect key="frame" x="0.0" y="428.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="472.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Go8-yM-bre">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -413,7 +418,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fDb-Jo-vL5" userLabel="Log switch">
-                                                        <rect key="frame" x="0.0" y="469.5" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="513.5" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UYh-Lw-Ate">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -443,7 +448,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB" userLabel="Buttons Functional">
-                                                        <rect key="frame" x="0.0" y="510.5" width="337.5" height="152"/>
+                                                        <rect key="frame" x="0.0" y="554.5" width="337.5" height="152"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hM5-ae-KQX">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
@@ -526,6 +531,7 @@
                     <navigationItem key="navigationItem" id="Q8j-Ph-CFz"/>
                     <connections>
                         <outlet property="age" destination="eMS-bu-G8z" id="bf6-PF-KDG"/>
+                        <outlet property="authToken" destination="JIB-dC-4Kd" id="lX0-xc-CbA"/>
                         <outlet property="gender" destination="5zL-fm-tit" id="RMb-LR-JGR"/>
                         <outlet property="keyAccess" destination="vMh-AE-6hM" id="7Nx-w2-04c"/>
                         <outlet property="keyAlias" destination="VuY-f5-b0H" id="tmT-yV-moW"/>
@@ -558,7 +564,7 @@
         <!--Key Set Register Controller-->
         <scene sceneID="40n-4u-xcO">
             <objects>
-                <viewController storyboardIdentifier="KeySetRegisterController" id="tv3-dS-cQq" customClass="KeySetRegisterController" customModule="ShopLiveDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="KeySetRegisterController" id="tv3-dS-cQq" customClass="KeySetRegisterController" customModule="Shoplive_Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fjU-vr-oje">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
